color slider setup

--- a/PiggyPatchwork/View/Base.lproj/Main.storyboard
+++ b/PiggyPatchwork/View/Base.lproj/Main.storyboard
@@ -447,7 +447,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TH9-e7-QGL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5494.202898550725" y="21.428571428571427"/>
+            <point key="canvasLocation" x="5429" y="21"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eAS-cp-vji">
