--- a/PiggyPatchwork/View/Base.lproj/Main.storyboard
+++ b/PiggyPatchwork/View/Base.lproj/Main.storyboard
@@ -152,24 +152,24 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gkr-g7-21j">
-                                <rect key="frame" x="70" y="605.5" width="274" height="50"/>
+                                <rect key="frame" x="75" y="605.5" width="264" height="50"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="edit" translatesAutoresizingMaskIntoConstraints="NO" id="frw-va-Hvh">
-                                        <rect key="frame" x="12" y="15" width="20" height="20"/>
+                                        <rect key="frame" x="30" y="15" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="8pA-7y-Scg"/>
                                             <constraint firstAttribute="height" constant="20" id="aPQ-1b-Fgv"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ehO-aB-eB5">
-                                        <rect key="frame" x="32" y="8.5" width="210" height="33"/>
+                                        <rect key="frame" x="65" y="8.5" width="169" height="33"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
                                                 <fragment content="藝術塗鴉">
                                                     <attributes>
                                                         <color key="NSColor" red="0.52156862745098043" green="0.81176470588235294" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <font key="NSFont" size="15" name="PingFangTC-Semibold"/>
-                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                     </attributes>
                                                 </fragment>
                                             </attributedString>
@@ -183,17 +183,17 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="077-Kx-bY9"/>
                                     <constraint firstItem="ehO-aB-eB5" firstAttribute="centerY" secondItem="gkr-g7-21j" secondAttribute="centerY" id="EKN-EO-Wds"/>
+                                    <constraint firstItem="ehO-aB-eB5" firstAttribute="leading" secondItem="frw-va-Hvh" secondAttribute="trailing" constant="15" id="SXL-6F-afl"/>
                                     <constraint firstItem="frw-va-Hvh" firstAttribute="centerY" secondItem="gkr-g7-21j" secondAttribute="centerY" id="YLn-8X-k2k"/>
-                                    <constraint firstItem="ehO-aB-eB5" firstAttribute="centerX" secondItem="gkr-g7-21j" secondAttribute="centerX" id="b3c-tm-uJZ"/>
-                                    <constraint firstItem="ehO-aB-eB5" firstAttribute="leading" secondItem="frw-va-Hvh" secondAttribute="trailing" id="o3T-LQ-ATW"/>
-                                    <constraint firstItem="frw-va-Hvh" firstAttribute="leading" secondItem="gkr-g7-21j" secondAttribute="leading" constant="12" id="uWo-tB-E44"/>
+                                    <constraint firstItem="frw-va-Hvh" firstAttribute="leading" secondItem="gkr-g7-21j" secondAttribute="leading" constant="30" id="uWo-tB-E44"/>
+                                    <constraint firstAttribute="trailing" secondItem="ehO-aB-eB5" secondAttribute="trailing" constant="30" id="ugY-M4-j7y"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2aY-4V-r13">
-                                <rect key="frame" x="70" y="691" width="274" height="50"/>
+                                <rect key="frame" x="75" y="691" width="264" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Ov-R4-93W">
-                                        <rect key="frame" x="30" y="8.5" width="214" height="33"/>
+                                        <rect key="frame" x="63" y="8.5" width="171" height="33"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
                                                 <fragment content="儲存到相簿">
@@ -209,7 +209,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="album" translatesAutoresizingMaskIntoConstraints="NO" id="Hga-Ot-P3u">
-                                        <rect key="frame" x="12" y="16" width="18" height="18"/>
+                                        <rect key="frame" x="30" y="16" width="18" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="18" id="XSW-Rp-N0Y"/>
                                             <constraint firstAttribute="height" constant="18" id="ugm-DV-2PP"/>
@@ -218,12 +218,12 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="7Ov-R4-93W" firstAttribute="centerX" secondItem="2aY-4V-r13" secondAttribute="centerX" id="0cA-3J-hUK"/>
-                                    <constraint firstItem="Hga-Ot-P3u" firstAttribute="leading" secondItem="2aY-4V-r13" secondAttribute="leading" constant="12" id="8fj-dP-1vS"/>
+                                    <constraint firstItem="Hga-Ot-P3u" firstAttribute="leading" secondItem="2aY-4V-r13" secondAttribute="leading" constant="30" id="8fj-dP-1vS"/>
                                     <constraint firstItem="Hga-Ot-P3u" firstAttribute="centerY" secondItem="2aY-4V-r13" secondAttribute="centerY" id="F7T-1c-vdZ"/>
                                     <constraint firstItem="7Ov-R4-93W" firstAttribute="centerY" secondItem="2aY-4V-r13" secondAttribute="centerY" id="Sjz-ER-Kr8"/>
                                     <constraint firstAttribute="height" constant="50" id="VwO-aE-XuI"/>
-                                    <constraint firstItem="7Ov-R4-93W" firstAttribute="leading" secondItem="Hga-Ot-P3u" secondAttribute="trailing" id="ffI-NL-ufV"/>
+                                    <constraint firstItem="7Ov-R4-93W" firstAttribute="leading" secondItem="Hga-Ot-P3u" secondAttribute="trailing" constant="15" id="ffI-NL-ufV"/>
+                                    <constraint firstAttribute="trailing" secondItem="7Ov-R4-93W" secondAttribute="trailing" constant="30" id="nDu-xc-EJr"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rXH-76-84t">
@@ -243,13 +243,13 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oS5-Dl-7HX">
-                                <rect key="frame" x="70" y="776.5" width="274" height="50"/>
+                                <rect key="frame" x="75" y="776.5" width="264" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h68-7n-Yie">
-                                        <rect key="frame" x="30" y="8.5" width="214" height="33"/>
+                                        <rect key="frame" x="63" y="8.5" width="171" height="33"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
-                                                <fragment content="分享至社群平台">
+                                                <fragment content="分享至社群">
                                                     <attributes>
                                                         <color key="NSColor" red="0.52156862745098043" green="0.81176470588235294" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <font key="NSFont" size="15" name="PingFangTC-Semibold"/>
@@ -263,7 +263,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="share" translatesAutoresizingMaskIntoConstraints="NO" id="Mhg-SE-WXd">
-                                        <rect key="frame" x="12" y="16" width="18" height="18"/>
+                                        <rect key="frame" x="30" y="16" width="18" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="18" id="ZFm-Sb-nn9"/>
                                             <constraint firstAttribute="height" constant="18" id="bvw-Qd-5ub"/>
@@ -272,12 +272,12 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="h68-7n-Yie" firstAttribute="leading" secondItem="Mhg-SE-WXd" secondAttribute="trailing" id="EPy-fR-uFy"/>
+                                    <constraint firstItem="h68-7n-Yie" firstAttribute="leading" secondItem="Mhg-SE-WXd" secondAttribute="trailing" constant="15" id="EPy-fR-uFy"/>
                                     <constraint firstItem="h68-7n-Yie" firstAttribute="centerY" secondItem="oS5-Dl-7HX" secondAttribute="centerY" id="GC2-ha-7bP"/>
-                                    <constraint firstItem="h68-7n-Yie" firstAttribute="centerX" secondItem="oS5-Dl-7HX" secondAttribute="centerX" id="UHw-4h-xrv"/>
-                                    <constraint firstItem="Mhg-SE-WXd" firstAttribute="leading" secondItem="oS5-Dl-7HX" secondAttribute="leading" constant="12" id="Xi7-3c-nKW"/>
+                                    <constraint firstItem="Mhg-SE-WXd" firstAttribute="leading" secondItem="oS5-Dl-7HX" secondAttribute="leading" constant="30" id="Xi7-3c-nKW"/>
                                     <constraint firstAttribute="height" constant="50" id="YJp-tD-dgd"/>
                                     <constraint firstItem="Mhg-SE-WXd" firstAttribute="centerY" secondItem="oS5-Dl-7HX" secondAttribute="centerY" id="w83-sD-uP9"/>
+                                    <constraint firstAttribute="trailing" secondItem="h68-7n-Yie" secondAttribute="trailing" constant="30" id="xZJ-Fj-qxa"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paint_hook" translatesAutoresizingMaskIntoConstraints="NO" id="m3D-wS-WRj">
@@ -286,9 +286,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="oS5-Dl-7HX" secondAttribute="trailing" constant="70" id="0DL-N9-BSU"/>
+                            <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="oS5-Dl-7HX" secondAttribute="trailing" constant="75" id="0DL-N9-BSU"/>
                             <constraint firstItem="GL7-XY-MXO" firstAttribute="height" secondItem="rXH-76-84t" secondAttribute="height" id="7ER-fx-3jb"/>
-                            <constraint firstItem="2aY-4V-r13" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="70" id="8Ht-Tu-uRM"/>
+                            <constraint firstItem="2aY-4V-r13" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="75" id="8Ht-Tu-uRM"/>
                             <constraint firstItem="GL7-XY-MXO" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="100" id="93f-Rn-M0R"/>
                             <constraint firstItem="8RW-Lg-a5t" firstAttribute="top" secondItem="m3D-wS-WRj" secondAttribute="bottom" id="B4E-P8-eDE"/>
                             <constraint firstItem="XYX-y0-UY6" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="40" id="Dc4-SR-igs"/>
@@ -299,13 +299,13 @@
                             <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="GL7-XY-MXO" secondAttribute="trailing" constant="100" id="OR3-as-IB5"/>
                             <constraint firstItem="OFY-XR-Cqm" firstAttribute="height" secondItem="rXH-76-84t" secondAttribute="height" id="S5v-wa-lYD"/>
                             <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="OFY-XR-Cqm" secondAttribute="trailing" constant="100" id="UtY-Gs-HMC"/>
-                            <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="gkr-g7-21j" secondAttribute="trailing" constant="70" id="VlG-KT-bJ0"/>
+                            <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="gkr-g7-21j" secondAttribute="trailing" constant="75" id="VlG-KT-bJ0"/>
                             <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="XYX-y0-UY6" secondAttribute="trailing" constant="40" id="XEq-oP-CsQ"/>
                             <constraint firstItem="XYX-y0-UY6" firstAttribute="centerX" secondItem="4rE-YD-sXu" secondAttribute="centerX" id="aAs-B2-pDT"/>
                             <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="7Ba-4P-xmt" secondAttribute="trailing" constant="100" id="cib-oW-6WD"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sbd-FK-rJV" secondAttribute="trailing" id="cw5-bU-XmZ"/>
                             <constraint firstItem="2aY-4V-r13" firstAttribute="top" secondItem="7Ba-4P-xmt" secondAttribute="bottom" id="dob-TY-BH0"/>
-                            <constraint firstItem="oS5-Dl-7HX" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="70" id="ecx-TJ-ceO"/>
+                            <constraint firstItem="oS5-Dl-7HX" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="75" id="ecx-TJ-ceO"/>
                             <constraint firstItem="m3D-wS-WRj" firstAttribute="centerX" secondItem="4rE-YD-sXu" secondAttribute="centerX" id="iqf-MH-8dD"/>
                             <constraint firstItem="OFY-XR-Cqm" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="100" id="j0w-HP-jEp"/>
                             <constraint firstItem="OFY-XR-Cqm" firstAttribute="top" secondItem="oS5-Dl-7HX" secondAttribute="bottom" id="lWa-wv-lA4"/>
@@ -317,9 +317,9 @@
                             <constraint firstItem="XYX-y0-UY6" firstAttribute="centerY" secondItem="4rE-YD-sXu" secondAttribute="centerY" constant="-50" id="tQs-Ui-dX0"/>
                             <constraint firstItem="gkr-g7-21j" firstAttribute="top" secondItem="rXH-76-84t" secondAttribute="bottom" id="tcL-zK-445"/>
                             <constraint firstItem="7Ba-4P-xmt" firstAttribute="top" secondItem="gkr-g7-21j" secondAttribute="bottom" id="uXL-YB-oys"/>
-                            <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="2aY-4V-r13" secondAttribute="trailing" constant="70" id="uxv-ft-Lxt"/>
+                            <constraint firstItem="4rE-YD-sXu" firstAttribute="trailing" secondItem="2aY-4V-r13" secondAttribute="trailing" constant="75" id="uxv-ft-Lxt"/>
                             <constraint firstItem="7Ba-4P-xmt" firstAttribute="height" secondItem="rXH-76-84t" secondAttribute="height" id="vt5-X8-2s3"/>
-                            <constraint firstItem="gkr-g7-21j" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="70" id="zEx-TL-A9G"/>
+                            <constraint firstItem="gkr-g7-21j" firstAttribute="leading" secondItem="4rE-YD-sXu" secondAttribute="leading" constant="75" id="zEx-TL-A9G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4rE-YD-sXu"/>
                     </view>
