--- a/PiggyPatchwork/View/PhotoMovie/PhotoMovieTableViewCell.xib
+++ b/PiggyPatchwork/View/PhotoMovie/PhotoMovieTableViewCell.xib
@@ -11,14 +11,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="97" id="Sty-v1-ZEl" customClass="PhotoMovieTableViewCell" customModule="PiggyPatchwork" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="97"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="226" id="Sty-v1-ZEl" customClass="PhotoMovieTableViewCell" customModule="PiggyPatchwork" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Sty-v1-ZEl" id="EwY-nq-u3W">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="96.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="206.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rgt-Wg-k5M">
+                        <rect key="frame" x="20" y="20" width="120" height="166.5"/>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTX-1E-Wgw">
+                        <rect key="frame" x="349" y="88.5" width="45" height="30"/>
+                        <state key="normal" title="Delete"/>
+                        <connections>
+                            <action selector="didClickDelete:" destination="Sty-v1-ZEl" eventType="touchUpInside" id="yd6-Ka-kfU"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Rgt-Wg-k5M" firstAttribute="width" secondItem="EwY-nq-u3W" secondAttribute="width" multiplier="120:414" id="0UM-Mp-igm"/>
+                    <constraint firstItem="Rgt-Wg-k5M" firstAttribute="leading" secondItem="EwY-nq-u3W" secondAttribute="leading" constant="20" id="Pw5-hr-0e9"/>
+                    <constraint firstItem="Rgt-Wg-k5M" firstAttribute="height" secondItem="EwY-nq-u3W" secondAttribute="height" multiplier="167/207" id="RtB-ic-kUy"/>
+                    <constraint firstItem="Rgt-Wg-k5M" firstAttribute="centerY" secondItem="EwY-nq-u3W" secondAttribute="centerY" id="bKC-yQ-RjB"/>
+                    <constraint firstItem="BTX-1E-Wgw" firstAttribute="centerY" secondItem="Rgt-Wg-k5M" secondAttribute="centerY" id="gh8-sC-IsY"/>
+                    <constraint firstAttribute="trailing" secondItem="BTX-1E-Wgw" secondAttribute="trailing" constant="20" id="kw4-qK-nRe"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="18.840579710144929" y="42.522321428571423"/>
+            <connections>
+                <outlet property="selectedPhotoImageView" destination="Rgt-Wg-k5M" id="RnY-NV-voL"/>
+            </connections>
+            <point key="canvasLocation" x="18.840579710144929" y="49.553571428571423"/>
         </tableViewCell>
     </objects>
 </document>
