--- a/PiggyPatchwork/PhotoMovie.storyboard
+++ b/PiggyPatchwork/PhotoMovie.storyboard
@@ -19,59 +19,82 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ai8-mt-WjQ">
-                                <rect key="frame" x="0.0" y="68" width="414" height="828"/>
-                                <color key="backgroundColor" red="0.71714967429999998" green="1" blue="0.72092782860000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <rect key="frame" x="0.0" y="90" width="414" height="726"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJi-eG-0eB">
-                                <rect key="frame" x="370" y="44" width="24" height="24"/>
-                                <state key="normal" image="Icons_24px_Add01"/>
+                            <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJi-eG-0eB">
+                                <rect key="frame" x="316" y="52" width="82" height="22"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="  下一步  " image="next_icon_right">
+                                    <color key="titleColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
-                                    <action selector="showAlbum:" destination="O0o-0k-QGJ" eventType="touchUpInside" id="IK0-ax-5nR"/>
+                                    <segue destination="Rw4-0u-qCx" kind="show" id="F9d-Vy-aIK"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V95-T0-HSu">
-                                <rect key="frame" x="0.0" y="796" width="414" height="100"/>
+                                <rect key="frame" x="0.0" y="816" width="414" height="80"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FYV-L5-zNa">
-                                        <rect key="frame" x="16" y="16" width="382" height="68"/>
-                                        <state key="normal" title="編輯影片"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FYV-L5-zNa">
+                                        <rect key="frame" x="172" y="-20" width="70" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="FYV-L5-zNa" secondAttribute="height" multiplier="1:1" id="5EH-mM-tRa"/>
+                                        </constraints>
+                                        <state key="normal" image="plus">
+                                            <color key="titleColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
                                         <connections>
-                                            <segue destination="Rw4-0u-qCx" kind="show" id="K0w-eF-9lW"/>
+                                            <action selector="addPhotos:" destination="O0o-0k-QGJ" eventType="touchUpInside" id="otJ-l9-9cn"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="FYV-L5-zNa" firstAttribute="top" secondItem="V95-T0-HSu" secondAttribute="top" constant="16" id="E2k-Yg-hab"/>
-                                    <constraint firstAttribute="trailing" secondItem="FYV-L5-zNa" secondAttribute="trailing" constant="16" id="OxQ-CP-mZC"/>
-                                    <constraint firstItem="FYV-L5-zNa" firstAttribute="leading" secondItem="V95-T0-HSu" secondAttribute="leading" constant="16" id="T5b-Kq-UUm"/>
-                                    <constraint firstAttribute="bottom" secondItem="FYV-L5-zNa" secondAttribute="bottom" constant="16" id="gat-4d-38W"/>
-                                    <constraint firstAttribute="height" constant="100" id="vpl-Ng-en1"/>
+                                    <constraint firstItem="FYV-L5-zNa" firstAttribute="top" secondItem="V95-T0-HSu" secondAttribute="top" constant="-20" id="E2k-Yg-hab"/>
+                                    <constraint firstItem="FYV-L5-zNa" firstAttribute="centerX" secondItem="V95-T0-HSu" secondAttribute="centerX" id="b0N-HQ-3lZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="FYV-L5-zNa" secondAttribute="bottom" constant="30" id="gat-4d-38W"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mOy-tD-sid">
+                                <rect key="frame" x="16" y="52" width="82" height="22"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="  回首頁  " image="next_icon_left">
+                                    <color key="titleColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="backToHomePage:" destination="O0o-0k-QGJ" eventType="touchUpInside" id="PWU-cO-Von"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="WRd-Db-W2R" firstAttribute="trailing" secondItem="Ai8-mt-WjQ" secondAttribute="trailing" id="6to-wK-nw7"/>
-                            <constraint firstItem="HJi-eG-0eB" firstAttribute="top" secondItem="WRd-Db-W2R" secondAttribute="top" id="8AU-xE-jvn"/>
                             <constraint firstAttribute="bottom" secondItem="V95-T0-HSu" secondAttribute="bottom" id="EJb-lc-VY2"/>
-                            <constraint firstItem="Ai8-mt-WjQ" firstAttribute="top" secondItem="HJi-eG-0eB" secondAttribute="bottom" id="Lwp-bc-RV6"/>
+                            <constraint firstItem="Ai8-mt-WjQ" firstAttribute="top" secondItem="HJi-eG-0eB" secondAttribute="bottom" constant="16" id="Lwp-bc-RV6"/>
                             <constraint firstItem="WRd-Db-W2R" firstAttribute="trailing" secondItem="V95-T0-HSu" secondAttribute="trailing" id="Owr-h6-wjv"/>
                             <constraint firstItem="V95-T0-HSu" firstAttribute="leading" secondItem="WRd-Db-W2R" secondAttribute="leading" id="PZb-8X-C5Y"/>
                             <constraint firstItem="Ai8-mt-WjQ" firstAttribute="leading" secondItem="WRd-Db-W2R" secondAttribute="leading" id="QJI-2s-Zxp"/>
-                            <constraint firstAttribute="bottom" secondItem="Ai8-mt-WjQ" secondAttribute="bottom" id="Rcr-eX-G0Z"/>
-                            <constraint firstItem="WRd-Db-W2R" firstAttribute="trailing" secondItem="HJi-eG-0eB" secondAttribute="trailing" constant="20" id="hs4-rb-mgB"/>
+                            <constraint firstItem="mOy-tD-sid" firstAttribute="leading" secondItem="WRd-Db-W2R" secondAttribute="leading" constant="16" id="SRS-nh-v1M"/>
+                            <constraint firstItem="V95-T0-HSu" firstAttribute="top" secondItem="Ai8-mt-WjQ" secondAttribute="bottom" id="X3P-zw-7jG"/>
+                            <constraint firstItem="WRd-Db-W2R" firstAttribute="trailing" secondItem="HJi-eG-0eB" secondAttribute="trailing" constant="16" id="hs4-rb-mgB"/>
+                            <constraint firstItem="HJi-eG-0eB" firstAttribute="centerY" secondItem="mOy-tD-sid" secondAttribute="centerY" id="ivw-hQ-Wzj"/>
+                            <constraint firstItem="mOy-tD-sid" firstAttribute="top" secondItem="WRd-Db-W2R" secondAttribute="top" constant="8" id="la8-rl-Ydv"/>
+                            <constraint firstItem="V95-T0-HSu" firstAttribute="height" secondItem="EXP-SL-jDg" secondAttribute="height" multiplier="80/896" id="nIZ-cG-t5Z"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WRd-Db-W2R"/>
                     </view>
                     <navigationItem key="navigationItem" id="njo-fO-mGi"/>
                     <connections>
+                        <outlet property="addPhotoBtn" destination="FYV-L5-zNa" id="evK-zh-8Np"/>
+                        <outlet property="backToHomeBtn" destination="mOy-tD-sid" id="0D0-Z9-QFC"/>
+                        <outlet property="nextStepBtn" destination="HJi-eG-0eB" id="3Kc-Zs-3PO"/>
                         <outlet property="photoMovieTableView" destination="Ai8-mt-WjQ" id="Zkd-Lg-fF3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JKq-6Z-crq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-217.39130434782609" y="193.52678571428569"/>
+            <point key="canvasLocation" x="-97.101449275362327" y="184.82142857142856"/>
         </scene>
         <!--Movie Preview View Controller-->
         <scene sceneID="Iri-Tl-fY9">
@@ -82,8 +105,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8he-oD-2ih">
-                                <rect key="frame" x="0.0" y="44" width="414" height="387"/>
-                                <color key="backgroundColor" red="0.71714967429999998" green="1" blue="0.72092782860000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <rect key="frame" x="20" y="144" width="374" height="287"/>
+                                <color key="backgroundColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D2Y-Nf-QBp">
                                 <rect key="frame" x="0.0" y="780" width="414" height="100"/>
@@ -104,9 +127,9 @@
                             <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="D2Y-Nf-QBp" secondAttribute="trailing" id="Q0P-zv-w7q"/>
                             <constraint firstItem="D2Y-Nf-QBp" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" id="Y07-yc-keZ"/>
                             <constraint firstAttribute="bottom" secondItem="D2Y-Nf-QBp" secondAttribute="bottom" constant="16" id="jz4-XG-Lds"/>
-                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="8he-oD-2ih" secondAttribute="trailing" id="sCs-zy-g9S"/>
-                            <constraint firstItem="8he-oD-2ih" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" id="sLi-lf-auc"/>
-                            <constraint firstItem="8he-oD-2ih" firstAttribute="top" secondItem="Njh-k4-5HJ" secondAttribute="top" id="xyp-Fs-0C7"/>
+                            <constraint firstItem="Njh-k4-5HJ" firstAttribute="trailing" secondItem="8he-oD-2ih" secondAttribute="trailing" constant="20" id="sCs-zy-g9S"/>
+                            <constraint firstItem="8he-oD-2ih" firstAttribute="leading" secondItem="Njh-k4-5HJ" secondAttribute="leading" constant="20" id="sLi-lf-auc"/>
+                            <constraint firstItem="8he-oD-2ih" firstAttribute="top" secondItem="Njh-k4-5HJ" secondAttribute="top" constant="100" id="xyp-Fs-0C7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Njh-k4-5HJ"/>
                     </view>
@@ -116,10 +139,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ecc-1n-v1U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="672" y="194"/>
+            <point key="canvasLocation" x="765" y="185"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Icons_24px_Add01" width="24" height="24"/>
+        <image name="next_icon_left" width="8" height="12"/>
+        <image name="next_icon_right" width="8" height="12"/>
+        <image name="plus" width="512" height="512"/>
     </resources>
 </document>
