--- a/PiggyPatchwork/View/PhotoMovie/PhotoMovieTableViewCell.xib
+++ b/PiggyPatchwork/View/PhotoMovie/PhotoMovieTableViewCell.xib
@@ -11,37 +11,76 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="226" id="Sty-v1-ZEl" customClass="PhotoMovieTableViewCell" customModule="PiggyPatchwork" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" shouldIndentWhileEditing="NO" rowHeight="291" id="Sty-v1-ZEl" customClass="PhotoMovieTableViewCell" customModule="PiggyPatchwork" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Sty-v1-ZEl" id="EwY-nq-u3W">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="206.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="219.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rgt-Wg-k5M">
-                        <rect key="frame" x="20" y="20" width="120" height="166.5"/>
-                    </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTX-1E-Wgw">
-                        <rect key="frame" x="349" y="88.5" width="45" height="30"/>
-                        <state key="normal" title="Delete"/>
-                        <connections>
-                            <action selector="didClickDelete:" destination="Sty-v1-ZEl" eventType="touchUpInside" id="yd6-Ka-kfU"/>
-                        </connections>
-                    </button>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TWI-Vn-9te" customClass="CardView" customModule="PiggyPatchwork" customModuleProvider="target">
+                        <rect key="frame" x="16" y="8" width="382" height="203.5"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTX-1E-Wgw">
+                                <rect key="frame" x="342" y="90" width="24" height="24"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="CF8-Pz-Gag"/>
+                                    <constraint firstAttribute="width" constant="24" id="RRM-QI-FW9"/>
+                                </constraints>
+                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="delete"/>
+                                <connections>
+                                    <action selector="didClickDelete:" destination="Sty-v1-ZEl" eventType="touchUpInside" id="yd6-Ka-kfU"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rgt-Wg-k5M">
+                                <rect key="frame" x="0.0" y="0.0" width="326" height="203.5"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BTX-1E-Wgw" firstAttribute="centerY" secondItem="TWI-Vn-9te" secondAttribute="centerY" id="5Z8-SZ-jVC"/>
+                            <constraint firstItem="Rgt-Wg-k5M" firstAttribute="top" secondItem="TWI-Vn-9te" secondAttribute="top" id="U6K-Mv-WQA"/>
+                            <constraint firstItem="BTX-1E-Wgw" firstAttribute="leading" secondItem="Rgt-Wg-k5M" secondAttribute="trailing" constant="16" id="UXV-JX-sWb"/>
+                            <constraint firstItem="Rgt-Wg-k5M" firstAttribute="leading" secondItem="TWI-Vn-9te" secondAttribute="leading" id="bId-rs-7LG"/>
+                            <constraint firstAttribute="trailing" secondItem="BTX-1E-Wgw" secondAttribute="trailing" constant="16" id="qXV-d9-rT1"/>
+                            <constraint firstAttribute="bottom" secondItem="Rgt-Wg-k5M" secondAttribute="bottom" id="y2p-KZ-9oc"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="8"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                <real key="value" value="0.5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOffsetWidth">
+                                <integer key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOffsetHeight">
+                                <integer key="value" value="3"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="Rgt-Wg-k5M" firstAttribute="width" secondItem="EwY-nq-u3W" secondAttribute="width" multiplier="120:414" id="0UM-Mp-igm"/>
-                    <constraint firstItem="Rgt-Wg-k5M" firstAttribute="leading" secondItem="EwY-nq-u3W" secondAttribute="leading" constant="20" id="Pw5-hr-0e9"/>
-                    <constraint firstItem="Rgt-Wg-k5M" firstAttribute="height" secondItem="EwY-nq-u3W" secondAttribute="height" multiplier="167/207" id="RtB-ic-kUy"/>
-                    <constraint firstItem="Rgt-Wg-k5M" firstAttribute="centerY" secondItem="EwY-nq-u3W" secondAttribute="centerY" id="bKC-yQ-RjB"/>
-                    <constraint firstItem="BTX-1E-Wgw" firstAttribute="centerY" secondItem="Rgt-Wg-k5M" secondAttribute="centerY" id="gh8-sC-IsY"/>
-                    <constraint firstAttribute="trailing" secondItem="BTX-1E-Wgw" secondAttribute="trailing" constant="20" id="kw4-qK-nRe"/>
+                    <constraint firstItem="TWI-Vn-9te" firstAttribute="top" secondItem="EwY-nq-u3W" secondAttribute="top" constant="8" id="Dfc-w7-Iah"/>
+                    <constraint firstItem="TWI-Vn-9te" firstAttribute="leading" secondItem="EwY-nq-u3W" secondAttribute="leading" constant="16" id="FpO-Vc-I0r"/>
+                    <constraint firstAttribute="bottom" secondItem="TWI-Vn-9te" secondAttribute="bottom" constant="8" id="ssu-rf-MZJ"/>
+                    <constraint firstAttribute="trailing" secondItem="TWI-Vn-9te" secondAttribute="trailing" constant="16" id="tN3-ln-NEh"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="cardView" destination="TWI-Vn-9te" id="jws-dZ-ZWi"/>
                 <outlet property="selectedPhotoImageView" destination="Rgt-Wg-k5M" id="RnY-NV-voL"/>
             </connections>
-            <point key="canvasLocation" x="18.840579710144929" y="49.553571428571423"/>
+            <point key="canvasLocation" x="18.840579710144929" y="27.455357142857142"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="delete" width="512" height="512"/>
+    </resources>
 </document>
